fix(program7) : 추천할 친구가 없는 경우 에러 해결